# template-mobile-wasm

./: .gitignore  Cargo.toml  README.md  bun.lockb  justfile  package.json  project.code-workspace
.cargo/: config.toml
appy/: Cargo.toml  Trunk.toml  bun.lockb  capacitor.config.ts  index.html  index.vercel.html  package.json  rust-toolchain.toml  vercel.json
appy/android/: capacitor.settings.gradle
appy/android/app/: build.gradle  capacitor.build.gradle
appy/android/app/src/main/java/com/example/appy/: MainActivity.java
appy/android/app/src/main/java/com/example/shared/uniffi/shared/: shared.kt
appy/android/app/src/main/res/values/: strings.xml
appy/end2end/: bun.lockb  package.json  playwright.config.ts  tsconfig.json
appy/end2end/tests/: localization.spec.ts
appy/ios/App/: Podfile
appy/ios/App/App/: Info.plist
appy/ios/App/App.xcodeproj/: project.pbxproj
appy/ios/App/App.xcodeproj/xcshareddata/xcschemes/: AppWidgetsExtension.xcscheme  Companion Watch App.xcscheme
appy/ios/App/AppWidgets/: AppWidgets.swift  AppWidgetsBundle.swift
appy/ios/App/Companion Watch App/: CompanionApp.swift  ContentView.swift
appy/messages/: en.json  fr.json
appy/public/: output.css
appy/src/: app.rs  home.rs  main.rs
capacitor-rs/: Cargo.toml  README.md  bun.lockb  package.json
capacitor-rs/js/: browser.ts  capacitor.ts  haptics.ts
capacitor-rs/js-dist/: browser.js  capacitor.js  haptics.js
capacitor-rs/src/plugins/: app.rs  browser.rs  capacitor.rs  haptics.rs  mod.rs
mobile/: .gitignore  Cargo.toml  build-android.sh  build-ios.sh
mobile/src/: lib.rs
shared/: Cargo.toml  README.md  build-ios.sh
shared/src/: lib.rs
shared/template/: Export.h  Info-framework.plist  Info-xcframework.plist  module.modulemap
